// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Section renders 1`] = `
<View
  style={
    [
      undefined,
      {
        "backgroundColor": "#F7F8FA",
        "borderRadius": 12,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "padding": 16,
      }
    }
  >
    <View>
      <View>
        Hello world
      </View>
    </View>
  </View>
</View>
`;

exports[`component: Section renders with title 1`] = `
<View
  style={
    [
      undefined,
      {
        "backgroundColor": "#F7F8FA",
        "borderRadius": 12,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0125,
              "textAlign": "left",
            },
          ],
          {
            "color": "#FEB027",
            "paddingVertical": 8,
          },
        ]
      }
    >
      hello world
    </Text>
    <View>
      <View>
        Hello world
      </View>
    </View>
  </View>
</View>
`;
